--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,5 +1,13 @@
 
-<p>shopping list works</p>
+ <div class="container">
+   <div class="row">
+     <div class="col-xs-12">
+       <div class="text-center">
+         <h3>Simple To-Do-APP</h3>
+       </div>
+     </div>
+   </div>
+ </div>
 <div>
   <app-shopping-list-edit></app-shopping-list-edit>
 </div>
@@ -11,6 +19,7 @@
               class="list-group-item"
               style="cursor: pointer"
               *ngFor="let item of shoppingListItem; let i = index"
+              (click)="onEditItem(i)"
             >
               {{ item.name }} | <span>Quantity-{{ item.quantity }}</span> | <span>Price-{{item.price }}</span>
              </a>
